--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,8 @@ nav{
     z-index: 100;
     background-color: white;
     overflow-y: hidden;
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
 }
 
 .nav-writings{
@@ -106,7 +108,6 @@ nav{
 .my-picture{
     width: 243px;
     height: 243px;
-    background-color: black;
     background-image: url('../imgs/portfolio-pic.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -152,19 +153,18 @@ nav{
 
 .services-list{
     width: min(1260px, 90%);
-    justify-content: left;
+    justify-content: center;
     gap: 15px;
 
 }
 
 .service-box{
     width: 300px;
-    height: 370px;
     border-radius: 50px;
     background-color: #fffefe;
     flex-direction: column;
     gap: 27px;
-    padding: 40px 18px 5px 25px;
+    padding: 40px 18px 40px 25px;
     border: solid 0.4px black;
 }
 
@@ -321,7 +321,7 @@ nav{
 
 .event-pic{
     min-width: min(300px, 100%);
-    height: 185px;
+    min-height: 185px;
     background-image: url('../imgs/project1.jpeg');
     background-position: center;
     background-repeat: no-repeat;
@@ -339,15 +339,17 @@ nav{
 }
 
 .event-title{
+    min-width: 100%;
     font-size: 30px;
     font-weight: bold;
 }
 
 .event-tags-bar{
-    gap: 28px;
+    gap: 20px;
     flex-wrap: nowrap;
-    width: 90%;
+    max-width: 90%;
     overflow-x: scroll;
+    min-width: 90%;
 }
 
 .event-tags-bar::-webkit-scrollbar {
@@ -377,6 +379,7 @@ nav{
 }
 
 .event-explanation{
+    min-width: 100%;
     margin-top: 14px;
 }
 
@@ -575,5 +578,11 @@ nav{
     .user-email,
     .user-name{
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 310px) {
+    .event-tags-bar{
+        flex-wrap: wrap;
     }
 }
