--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     margin: 0;
     scroll-behavior: smooth;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 div,
@@ -66,6 +67,7 @@ nav{
     background-color: white;
     -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
+    overflow-x: visible;
 }
 
 .nav-writings{
@@ -566,6 +568,10 @@ nav{
 }
 
 @media screen and (max-width: 800px){
+    .events-section{
+        flex-direction: column;
+        align-items: center;
+    }
     .event{
         flex-direction: column;
         justify-content: center;
